# spn32

./: CMakeLists.txt  LICENSE  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
include/: def_alarm.h  project_config.h
lib/: alarm.7z
lib/alarm/include/: alarm.h
lib/alarm/src/: alarm.cpp
lib/meAlarm/src/: meAlarm.cpp
lib/security/: security.cpp  security.cpp.txt  security.h
lib/sensors/: sensors.cpp  sensors.h
lib/signals/: CMakeLists.txt  signals.cpp  signals.h
lib/slave/: CMakeLists.txt  slave.cpp  slave.h
lib/staff/: CMakeLists.txt  staff.c  staff.h
lib/tsop/: CMakeLists.txt  library.json  tsop.c  tsop.cpp  tsop.cpp.txt  tsop.h
src/: CMakeLists.txt  Kconfig.projbuild  main.cpp
